# xjtumen-tauri-svelte

./: Cargo.toml  _cmd  package.json  pnpm-lock.yaml
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
