[package]
name = "xjtumen-tauri-svelte"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "xjtu_men_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["unstable"] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2.0.0-beta"
tauri-plugin-http = "2.0.0-beta"
futures = "0.3.30"
reqwest = "0.12.4"
tokio = "1.37.0"

# this old version of tauri-api introduces a lot of old depency packages
# will cause errors when `pnpm tauri build --target x86_64-pc-windows-gnu `
#tauri-api = "0.7.6"

#ntapi = "0.4.1"
#sysinfo = "0.30.11"

# should be placed in workspace root, not package root!
#[patch.crates-io]
#tauri = { path = "/f/tauri/"}
